--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,50 +12,40 @@
 .chart {
   background-color: #eee;
   border: solid 1px #ddd;
+  shape-rendering: crispEdges;
 }
 
-/**
-  Base line graph styling
-*/
+.index-0 {stroke: blue; fill: blue;}
+.index-1 {stroke: red; fill: red;}
+.index-2 {stroke: green; fill: green;}
+.index-3 {stroke: yellow; fill: yellow;}
+.index-4 {stroke: purple; fill: purple;}
+.index-5 {stroke: orange; fill: orange;}
+.index-6 {stroke: black; fill: black;}
+.index-7 {stroke: gray; fill: gray;}
+
+/* Lines */
 .line {
   stroke-width: 1.5px;
-  stroke: blue;
   fill: none;
 }
 
-.series.index-0 .line {stroke: blue;}
-.series.index-1 .line {stroke: red;}
-.series.index-2 .line {stroke: green;}
-.series.index-3 .line {stroke: yellow;}
-.series.index-4 .line {stroke: purple;}
-.series.index-5 .line {stroke: orange;}
-.series.index-6 .line {stroke: black;}
-.series.index-7 .line {stroke: gray;}
-
-/**
-  Base bars graph styling
-*/
+/* Bars */
 .bar {
-  fill: blue;
+  stroke: none;
 }
 
-.series.index-0 .bar {fill: blue;}
-.series.index-1 .bar {fill: red;}
-.series.index-2 .bar {fill: green;}
-.series.index-3 .bar {fill: yellow;}
-.series.index-4 .bar {fill: purple;}
-.series.index-5 .bar {fill: orange;}
-.series.index-6 .bar {fill: black;}
-.series.index-7 .bar {fill: gray;}
+/* Labels */
+.label {
+  stroke: none;
+}
 
-/**
-  Base axis styling
-*/
+/* Axis styling */
 .axis {
 
 }
 .axis path {
-  stroke-width: 1.5px;
+  stroke-width: 2px;
   fill: none;
   stroke: black;
 }
@@ -63,9 +53,7 @@
   font-size: 90%;
 }
 
-/**
-  Base legend styling
-*/
+/* Legend */
 .legend {
 
 }
