--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/d3.chart.multi.base.css">
   </head>
   <body>
     {{ content }}
