--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/d3.chart.multi.base.css">
   </head>
-  <body>
+  <body class="{{ page.class }}">
     {{ content }}
 
     {{ page.scripts }}
