--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@ $small-screen: 768px;
 $medium-screen: 992px;
 $large-screen: 1200px;
 
+$container-padding: 10px;
 $header-height: 60px;
 
 @import 'normalize';
