--- a/_css/_header.scss
+++ b/_css/_header.scss
@@ -5,10 +5,22 @@ $header-height: 60px;
 
 .header {
   @include container;
+  @include font-size(1.7);
 
-  height: $header-height;
   margin: 0 auto;
-  @include font-size(1.6);
+  border-bottom: solid 1px #ccc;
+}
+
+.header-link {
+  display: inline-block;
+  padding: 0 $container-padding;
+  line-height: $header-height;
+  text-decoration: none;
+  color: #000;
+
+  &:hover {
+    background-color: #eee;
+  }
 }
 
 .header-branding {
@@ -21,6 +33,7 @@ $header-height: 60px;
   float: right;
 }
 
-.header-link {
-  line-height: $header-height;
+.branding {
+  font-weight: normal;
+  font-size: 1.4em;
 }
