--- a/_css/_mixins.scss
+++ b/_css/_mixins.scss
@@ -1,5 +1,7 @@
 @mixin container {
   position: relative;
+  padding-left: $container-padding;
+  padding-right: $container-padding;
 
   @media (min-width: $medium-screen) {
     width: 970px;
