Add Bootstrap and update dependencies
- Add Bootstrap sass
- Add uglify + concat task for js dependencies

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,13 +7,9 @@ $large-screen: 1200px;
 $container-padding: 10px;
 $header-height: 60px;
 
-@import 'normalize';
-@import 'highlight';
-@import 'mixins';
+@import "bootstrap";
 
-@import 'base';
-@import 'utilities';
-@import 'header';
-@import 'content';
-@import 'example';
-@import 'docs';
+// Custom components
+@import "highlight";
+@import "example";
+@import "docs";
