--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -4,19 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
-      {{ page.title }} | d3.chart.multi
+      {% if page.title %}{{ page.title }} | {% endif %}d3.chart.multi
     </title>
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/d3.chart.multi.base.css">
   </head>
   <body class="{{ page.class }}">
-    {{ content }}
-
-    {{ page.scripts }}
-    
+{{ content }}
+    <script src="{{ site.baseurl }}/js/dependencies.min.js"></script>
+{{ page.scripts }}    
     <script type="text/javascript">
       // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
