Reorganize site map and js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,16 @@
 ---
 layout: blank
 ---
+<header class="header clearfix">
+  <h1 class="header-branding"><a class="branding header-link" href="#">d3.chart.multi</a></h1>
+  <nav class="header-navigation">
+    <ul class="inline-list">
+      <li><a class="header-link" href="#">Getting Started</a></li>
+      <li><a class="header-link" href="#">Examples</a></li>
+      <li><a class="header-link" href="#">Docs</a></li>
+      <li><a class="header-link" href="#">GitHub</a></li>
+    </ul>
+  </nav>
+</header>
+
 {{ content }}
