--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -14,7 +14,7 @@
   </head>
   <body class="{{ page.class }}">
 {{ content }}
-    <script src="{{ site.baseurl }}/js/dependencies.min.js"></script>
+    <script src="{{ site.baseurl }}/js/vendor.min.js"></script>
 {{ page.scripts }}    
     <script type="text/javascript">
       // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
