--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -9,12 +9,13 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/d3.chart.multi.base.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   </head>
   <body class="{{ page.class }}">
 {{ content }}
     <script src="{{ site.baseurl }}/js/vendor.min.js"></script>
+    <script src="{{ site.baseurl }}/d3.chart.multi.js"></script>
 {{ page.scripts }}    
     <script type="text/javascript">
       // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
