Add initial dynamic example

--- a/_css/_docs.scss
+++ b/_css/_docs.scss
@@ -22,7 +22,7 @@
   &:hover {
     text-decoration: underline;
   }
-  & .version {
+  .version {
     font-size: 10px;
     font-weight: normal;
   }
