--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,6 @@ layout: blank
     </nav>
   </div>
 </header>
-<article class="container" id="content" role="main">
+<article class="container content-container" id="content" role="main">
 {{ content }}
 </article>
