--- a/_includes/example-line-bar-values.html
+++ b/_includes/example-line-bar-values.html
@@ -1,6 +1,5 @@
 <script type="text/html" id="example-line-bar-values">
-{% highlight js %}
-var example = d3.select('.js-chart').append('svg')
+<pre><code class="js">var example = d3.select('.js-chart').append('svg')
   .chart('Multi', function(data) {
     var input = data.input;
     var results = data.results;
@@ -33,9 +32,8 @@ var example = d3.select('.js-chart').append('svg')
       title: 'Input vs. Output'
     });
   });
-{% endhighlight %}
-{% highlight js %}
-{
+</code></pre>
+<pre><code class="js">{
   input: [
     {
       key: 'input',
@@ -53,5 +51,5 @@ var example = d3.select('.js-chart').append('svg')
     }
   ]
 };
-{% endhighlight %}
+</code></pre>
 </script>
