--- a/_includes/example-line.html
+++ b/_includes/example-line.html
@@ -1,6 +1,5 @@
 <script type="text/html" id="example-line">
-{% highlight js %}
-var example = d3.select('.js-chart').append('svg')
+<div class="highlight"><pre><code class="js">var example = d3.select('.js-chart').append('svg')
   .chart('Multi', function(data) {
     // Manipulate data as needed
 
@@ -44,9 +43,8 @@ var example = d3.select('.js-chart').append('svg')
     };
   })
   .margins({top: 0, right: 15, bottom: 5, left: 5});
-{% endhighlight %}
-{% highlight js %}
-[
+</code></pre></div>
+<div class="highlight"><pre><code class="js">[
   {
     key: 'a', values: [
       {x: 0, y: 10}, {x: 10, y: 20}, {x: 20, y: 50}, {x: 30, y: 100}
@@ -58,5 +56,5 @@ var example = d3.select('.js-chart').append('svg')
     ]
   }
 ]
-{% endhighlight %}
+</pre></div>
 </script>
