--- a/src/css/base.css
+++ b/src/css/base.css
@@ -10,8 +10,9 @@
 */
 
 .chart-multi {
-  background-color: #eee;
+  background-color: #fff;
   border: solid 1px #ddd;
+  font-size: 14px;
 }
 
 .chart-index-0 {stroke: #1f77b4; fill: #1f77b4;}
@@ -39,6 +40,7 @@
 .chart-label-text {
   stroke: none;
   fill: black;
+  font-size: 0.85em;
 }
 .chart-label-bg {
   opacity: 0.5;
@@ -71,6 +73,6 @@
 }
 
 /* Legend */
-.chart-legend {
-
+.chart-legend-label {
+  font-size: 0.9em;
 }
