Change name to d3.compose

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@ layout: blank
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="{{ site.baseurl }}/">d3.chart.multi</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/">d3.compose</a>
     </div>
     <nav class="collapse navbar-collapse" id="navigation">
       <ul class="nav navbar-nav navbar-right">
         <li {% if page.url == "/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/">Getting Started</a></li>
         <li {% if page.url == "/examples/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/examples/">Examples</a></li>
         <li {% if page.url == "/docs/index.html" %}class="active"{% endif %}><a href="{{ site.baseurl }}/docs/">Docs</a></li>
-        <li><a href="https://github.com/CSNW/d3.chart.multi" target="_blank">GitHub</a></li>
+        <li><a href="https://github.com/CSNW/d3.compose" target="_blank">GitHub</a></li>
       </ul>
     </nav>
   </div>
