--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
-      {% if page.title %}{{ page.title }} | {% endif %}d3.chart.multi
+      {% if page.title %}{{ page.title }} | {% endif %}d3.compose
     </title>
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/d3.chart.multi.base.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/d3.compose.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   </head>
   <body class="{{ page.class }}">
 {{ content }}
     <script src="{{ site.baseurl }}/js/vendor.min.js"></script>
-    <script src="{{ site.baseurl }}/d3.chart.multi.js"></script>
+    <script src="{{ site.baseurl }}/d3.compose-all.js"></script>
 {{ page.scripts }}    
     <script type="text/javascript">
       // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
