--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: blank
 ---
 <a class="sr-only sr-only-focusable" id="skip-to-content" href="#content">
-  <div class="container"><span class="skip-to-content-text">Skip to content</span></div>
+  <span class="skip-to-content-text">Skip to content</span>
 </a>
 <header class="navbar navbar-static-top header" id="top" role="banner">
   <div class="container">
