--- a/_css/_header.scss
+++ b/_css/_header.scss
@@ -10,6 +10,21 @@
 
 .header {
   border-bottom: solid 1px #eee;
+  background-color: $primary-color;
+  color: #fff;
+
+  & a, 
+  & a:hover, 
+  & a:active,
+  & a:visited {
+    color: #fff;
+  }
+
+  & .nav > li > a:hover,
+  & .nav > li > a:focus,
+  & .active {
+    background-color: $primary-color-dark;
+  }
 
   & .navbar-brand {
     font-size: 1.5em;
@@ -18,9 +33,6 @@
     border-color: #eee;
   }
   & .icon-bar {
-    background-color: #000;
-  }
-  & .active {
-    background-color: #fafafa;
+    background-color: #fff;
   }
 }
