Add docs automation (Component)
Completed classes: Component

--- a/_css/_bootstrap.scss
+++ b/_css/_bootstrap.scss
@@ -10,7 +10,7 @@
 // Core CSS
 @import "bootstrap/scaffolding";
 @import "bootstrap/type";
-@import "bootstrap/code";
+// @import "bootstrap/code";
 @import "bootstrap/grid";
 @import "bootstrap/tables";
 @import "bootstrap/forms";
@@ -26,7 +26,7 @@
 // @import "bootstrap/breadcrumbs";
 // @import "bootstrap/pagination";
 // @import "bootstrap/pager";
-// @import "bootstrap/labels";
+@import "bootstrap/labels";
 // @import "bootstrap/badges";
 // @import "bootstrap/jumbotron";
 // @import "bootstrap/thumbnails";
