--- a/_css/_docs.scss
+++ b/_css/_docs.scss
@@ -64,6 +64,50 @@
   box-shadow: 0px 0px 5px 0px #eee;
 }
 
+.docs-description {}
+.docs-example {}
+.docs-item-header {
+  font-size: 15px;
+  font-weight: bold;
+}
+.docs-item-code {
+  font-weight: normal;
+  background-color: transparent;
+}
+.docs-item-static {
+  font-weight: normal;
+  background-color: transparent;
+  color: #333;
+  border: solid 1px #ccc;
+  padding: 0.1em 0.6em 0.15em;
+  margin-left: 5px;
+}
+.docs-item-description {
+  font-size: 13px;
+}
+.docs-item-example {}
+
+.docs-params {
+  padding-left: 1.5em;
+  font-size: 13px;
+}
+.docs-params code {
+  background-color: transparent;
+  font-size: inherit;
+}
+.docs-props {
+  padding-left: 1.5em;
+  margin-top: 2px;
+}
+.docs-return {
+  margin-bottom: 1em;
+  
+  & > small {
+    text-transform: uppercase;
+    font-size: 11px;
+  }
+}
+
 .docs-content {
   tt {
     font-family: Monaco, Consolas, "Lucida Console", monospace;
