--- a/_css/_docs.scss
+++ b/_css/_docs.scss
@@ -1,8 +1,12 @@
 .docs-sidebar {
   color: #444;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   &.affix {
-    top: 20px;
+    top: 0;
+    bottom: 0;
+    padding-top: 20px;
   }
 
   .nav a {
@@ -45,14 +49,23 @@
 
   .back-to-top {
     display: block;
-    margin-top: 15px;
-    margin-left: 20px;
+    margin: 15px 0 10px 20px;
     color: #aaa;
   }
 
   hr {
     padding: 0;
     margin: 5px 0;
+  }
+
+  @media (min-width: $screen-md-min) {
+    width: 228px;
+  }
+  @media (min-width: $screen-lg-min) {
+    width: 180px;
+  }
+  @media (min-width: $screen-xl-min) {
+    width: 230px;
   }
 }
 
@@ -99,16 +112,56 @@
   background-color: transparent;
   font-size: inherit;
 }
+.docs-param-type {
+  font-family: $font-family-monospace;
+  font-style: italic;
+  padding: 0 0.1em;
+}
+.docs-param-description {
+  margin-left: 5px;
+  display: inline-block;
+
+  & p,
+  & ul,
+  & ol {
+    margin-top: 4px;
+
+    &:last-child {
+      margin-bottom: 4px;  
+    }
+    &:first-child {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+  & ul, 
+  & ol {
+    padding-left: 1.5em;
+  }
+}
 .docs-props {
   padding-left: 1.5em;
   margin-top: 2px;
+
+  & > li:first-child {
+    margin-top: 4px;
+  }
+  & > li > code {
+    display: inline-block;
+    margin-bottom: 4px;
+  }
 }
 .docs-return {
   margin-bottom: 1em;
+  font-size: 13px;
   
   & > small {
     text-transform: uppercase;
     font-size: 11px;
+  }
+  & > ul, & > ol {
+    padding-left: 2em;
   }
 }
 
