--- a/_includes/docs-toc-section.html
+++ b/_includes/docs-toc-section.html
@@ -1,6 +1,6 @@
 <li>
   <a href="#{{include.class.id}}">
-    {{include.class.name}}
+    {{include.class.shortname}}
   </a>
 
   <ul class="nav is-nested">
