--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -9,7 +9,7 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/d3.compose.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/d3.compose.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   </head>
   <body class="{{ page.class }}">
