--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -2,6 +2,6 @@
 layout: blank
 ---
 {% include header.html %}
-<article class="container content-container" id="content" role="main">
+<article id="content" role="main">
 {{ content }}
 </article>
