--- a/css/main.scss
+++ b/css/main.scss
@@ -66,6 +66,7 @@ pre {
 // Custom components
 @import "highlight";
 @import "header";
+@import "home";
 @import "examples";
 @import "docs";
 @import "editor";
