Tweak getting started editor

--- a/_css/_editor.scss
+++ b/_css/_editor.scss
@@ -97,6 +97,8 @@
   .editor-chart-container {}
 
   .editor-chart {
+    margin-bottom: 1px;
+
     .chart-compose {
       border: none;
     }
@@ -128,7 +130,7 @@
       }
     }
   }
-  
+
   .editor-customize {
 
   }
