--- a/_includes/editor-placeholder.html
+++ b/_includes/editor-placeholder.html
@@ -6,7 +6,9 @@
     </div>
   </div>
 </div>
+{% unless include.hide_controls %}
 <div class="editor-options"></div>
 <div class="editor-details">
   <a class="editor-show-options" style="color: #666;">Loading...</a>
 </div>
+{% endunless %}
