Add code block highlighting to getting started

--- a/_css/_home.scss
+++ b/_css/_home.scss
@@ -38,7 +38,9 @@
 }
 
 .getting-started {
-
+  section.is-active pre {
+    border-left-color: $brand-warning;
+  }
 }
 
 .getting-started-chart-container {
