--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@ $header-height: 60px;
 $background-color: #f7f7f7;
 $primary-color: #457abb;
 $primary-color-dark: darken($primary-color, 5%);
+$icon-font-path: "fonts/";
 
 @import "bootstrap";
 
