--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}/d3.compose.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600">
   </head>
   <body class="{{ page.class }}">
 {{ content }}
